[package]
name = "dantelion-formats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
byteorder = "1.4.3"
winreg = "0.10.1"
miniz_oxide = "0.6.2"
libloading = "0.7"
thiserror = "1.0.38"
binary-interpreter = { path = "../binary-interpreter"}